# BREPS-research

./: .gitignore  Evaluate Models.ipynb  INSTALL_FIXES.md  README.md  config.yml  critical_shifts.json  critical_shifts_berkeley.json  critical_shifts_coco.json  critical_shifts_smoothed.json  plan_for_today.md  pyproject.toml  runbboxparallel.sh
heatmaps/: HEATMAPS.md  comp_hw.py  comp_hw_smoothed.py  defend_critical_shifts.py  defend_user_study.py  draw_heatmaps.py  env_dispatch.py  predicted_iou_heatmap.py
isegm/data/: base.py  sample.py  transforms.py
isegm/data/datasets/: __init__.py  acdc.py  ade20k.py  buid.py  tetris.py  (+4 more)
isegm/inference/: bbox_handler.py  clicker.py  evaluation.py  utils.py
isegm/model/: is_medsam_model.py  is_mobilesam_model.py  is_model.py  is_robustsam_model.py  is_sam2_model.py  is_sam_model.py  is_samhq_model.py  is_sammed2d_model.py  is_scribbleprompt_model_sam.py  ops.py
isegm/utils/: exp.py  misc.py  vis.py
scripts/: PROBE_ACTIVATIONS_NOTES.md  animate_grad_refine.py  defend_critical_shifts.py  draw_critical_shifts.py  evaluate_boxes_model_medsam.py  evaluate_boxes_model_mobilesam.py  evaluate_boxes_model_robustsam.py  evaluate_boxes_model_sam.py  evaluate_boxes_model_sam2.py  evaluate_boxes_model_samhq.py  evaluate_boxes_model_sammed2d.py  evaluate_boxes_model_scribbleprompt_sam.py  evaluate_jitters.py  explore_user_study.py  find_critical_shifts.py  group_robustness_deciles.py  probe_decoder_activations.py  refine_box_iou_grad.py  setup_repo.sh  visualize_attention_maps.py  visualize_defence_cases.py  visualize_single_image.py
(+10 files in other folders)
